# explore-clustering-results

./: .gitignore  index.html  package-lock.json  package.json  solar-shading-prompt-plan.md
server/: README.md  generate_spread_positions.py  import_data.py  import_outdoor.py  main.py  pyproject.toml  requirements.txt  schema.sql
src/: App.jsx  DegreeHoursMap.jsx  api.js  constants.js  index.css  styles.js
src/components/: CommandStrip.jsx
src/tabs/: BuildingHomogeneity.jsx  ClusterProfiles.jsx  MapView.jsx  MetadataStats.jsx  TimeSeriesView.jsx
src/utils/: smhiIrradiance.js  sunPosition.js
